Finalizada #4 e pequenas correções em #2 Co-authored-by: Gabriel Rodrigues <Apenasgabs@users.noreply.github.com> Alan Santana <gankun26@users.noreply.github.com>
